--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-#kubernetes>=10.0
-#jupyterhub==1.0.0
-#jupyterhub-kubespawner==0.11.0
+kubernetes>=10.0
+jupyterhub==1.0.0
+jupyterhub-kubespawner==0.11.0
 #git+https://github.com/jupyterhub/kubespawner.git@a945ef01410867b39e0c174d362a8702bbaa15e9#egg=jupyterhub-kubespawner
-#git+https://github.com/jupyterhub/wrapspawner.git@5f2b7075f77d0c1c49066682a8e8adad0dab76db
-#jupyterhub-tmpauthenticator==0.6
-#oauthenticator==0.9.0
-#jupyterhub-ldapauthenticator==1.2.2
-#psycopg2==2.8.4
-#openshift==0.10.0
-#wrapt==1.11.2
+git+https://github.com/jupyterhub/wrapspawner.git@5f2b7075f77d0c1c49066682a8e8adad0dab76db
+jupyterhub-tmpauthenticator==0.6
+oauthenticator==0.9.0
+jupyterhub-ldapauthenticator==1.2.2
+psycopg2==2.8.4
+openshift==0.10.0
+wrapt==1.11.2
 
 #kubernetes
-jupyterhub
-jupyterhub-kubespawner
-wrapspawner
-jupyterhub-tmpauthenticator
-oauthenticator
-jupyterhub-ldapauthenticator==1.2.2
-psycopg2
-openshift
-wrapt==1.11.2
+#jupyterhub
+#jupyterhub-kubespawner
+#wrapspawner
+#jupyterhub-tmpauthenticator
+#oauthenticator
+#jupyterhub-ldapauthenticator==1.2.2
+#psycopg2
+#openshift
+#wrapt==1.11.2
